--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="main-list">
             <li class="item-list">
-              <h3 class="action">Внимание к деталям</h3>
-              <p class="description">
+              <svg>
+                <use href="/images/symbol-defs.svg#icon-antenna"></use>
+              </svg>
+              <h3 class="action"> 
+              Внимание к деталям</h3>
+              <p class="description"> 
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
