добавлено изображение в геройе

--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="main-list">
             <li class="item-list">
-              <svg>
-                <use href="/images/symbol-defs.svg#icon-antenna"></use>
-              </svg>
+              <div class="icon">
+                <svg>
+                  <use href="./images/symbol-defsnew.svg#icon-antenna">
+                  </use>
+                </svg>
+              </div>
               <h3 class="action"> 
               Внимание к деталям</h3>
               <p class="description"> 
