Добавлени иконки в пашке

--- a/index.html
+++ b/index.html
@@ -46,13 +46,21 @@
         </nav>
         <ul class="contacts">
           <li class="item">
-            <a class="header-list" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="header-list" href="mailto:info@devstudio.com">
+              <svg class="icon-header-envelope">
+                  <use href="./images/symbol-defsnew.svg#icon-envelope">
+                  </use>
+                </svg>
+            info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a class="header-list" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="header-list" href="tel:+380961111111">
+              <svg class="icon-header-smartphhone">
+                  <use href="./images/symbol-defsnew.svg#icon-smartphone">
+                  </use>
+                </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -71,8 +79,8 @@
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="main-list">
             <li class="item-list">
-              <div class="icon">
-                <svg>
+              <div class="icon-box">
+                <svg class="icon">
                   <use href="./images/symbol-defsnew.svg#icon-antenna">
                   </use>
                 </svg>
@@ -85,6 +93,12 @@
               </p>
             </li>
             <li class="item-list">
+              <div class="icon-box">
+                <svg class="icon">
+                  <use href="./images/symbol-defsnew.svg#icon-clock">
+                  </use>
+                </svg>
+              </div>
               <h3 class="action">Пунктуальность</h3>
               <p class="description">
                 Задача организации, в особенности же рамки и место обучения
@@ -92,6 +106,12 @@
               </p>
             </li>
             <li class="item-list">
+              <div class="icon-box">
+                <svg class="icon">
+                  <use href="./images/symbol-defsnew.svg#icon-diagram">
+                  </use>
+                </svg>
+              </div>
               <h3 class="action">Планирование</h3>
               <p class="description">
                 Равным образом консультация с широким активом в значительной
@@ -99,6 +119,11 @@
               </p>
             </li>
             <li class="item-list">
+              <div class="icon-box">
+                <svg class="icon">
+                  <use href="./images/symbol-defsnew.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="action">Современные технологии</h3>
               <p class="description">
                 Значимость этих проблем настолько очевидна, что реализация
