--- a/index.html
+++ b/index.html
@@ -179,6 +179,42 @@
                   <h3 class="person">Игорь Демьяненко</h3>
                   <p class="speciality">Product Designer</p>
                 </div>
+                <div class="socials">
+                  <ul class="socials-list">
+                    <li  class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-instagram">
+                    </use>
+                   </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-twitter">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-facebook">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-linkedin">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                  </ul>
+                </div>
             </li>
             <li class="img-team">
                   <img
@@ -190,6 +226,42 @@
                 <div class="card-content">
                   <h3 class="person">Ольга Репина</h3>
                   <p class="speciality">Frontend Developer</p>
+                </div>
+                <div class="socials">
+                  <ul class="socials-list">
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-instagram">
+                    </use>
+                   </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-twitter">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-facebook">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-linkedin">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                  </ul>
                 </div>
             </li>
             <li class="img-team">
@@ -203,6 +275,42 @@
                   <h3 class="person">Николай Тарасов</h3>
                   <p class="speciality">Marketing</p>
                 </div>
+                <div class="socials">
+                  <ul class="socials-list">
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-instagram">
+                    </use>
+                   </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-twitter">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-facebook">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-linkedin">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                  </ul>
+                </div>
             </li>
             <li class="img-team">
                   <img
@@ -215,10 +323,51 @@
                   <h3 class="person">Михаил Ермаков</h3>
                   <p class="speciality">UI Designer</p>
                 </div>
+                <div class="socials">
+                  <ul class="socials-list">
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-instagram">
+                    </use>
+                   </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-twitter">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-facebook">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                    <li class="socials-item">
+                      <a href="#" class="socials-link">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-linkedin">
+                    </use>
+                  </svg>
+                    </a>
+                    </li>
+                  </ul>
+                </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="section client-section">
+        <div class="container client-container">
+          <h2>Постоянные клиенты</h2>
+        </div>
+        </section>
     </main>
     <footer class="footer">
       <div class="container footer-container">
