--- a/portfolio.html
+++ b/portfolio.html
@@ -41,13 +41,19 @@
         </nav>
         <ul class="contacts">
           <li class="item">
-            <a class="header-list" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="header-list" href="mailto:info@devstudio.com">
+              <svg class="icon-header-envelope">
+                <use href="./images/symbol-defsnew.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a class="header-list" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="header-list" href="tel:+380961111111">
+              <svg class="icon-header-smartphhone">
+                <use href="./images/symbol-defsnew.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
