добавлены иконки в футтере

--- a/index.html
+++ b/index.html
@@ -365,33 +365,112 @@
       </section>
       <section class="section client-section">
         <div class="container client-container">
-          <h2>Постоянные клиенты</h2>
+          <h2 class="client-header">Постоянные клиенты</h2>
+          <div class="client-box">
+            <ul class="client-list">
+            <li class="icon-client-item">
+              <svg class="icon-client">
+                <use class="icon-group" href="./images/symbol-defsnew.svg#icon-group-1" width="41px" height="47px">
+                </use>
+              </svg>
+            </li>
+            <li class="icon-client-item">
+              <svg class="icon-client">
+                <use class="icon-group" href="./images/symbol-defsnew.svg#icon-group-2" width="41px" height="47px">
+                </use>
+              </svg>
+            </li>
+            <li class="icon-client-item">
+              <svg class="icon-client">
+                <use class="icon-group" href="./images/symbol-defsnew.svg#icon-group-3" width="41px" height="47px">
+                </use>
+              </svg>
+            </li>
+            <li class="icon-client-item">
+              <svg class="icon-client">
+                <use class="icon-group" href="./images/symbol-defsnew.svg#icon-group-4" width="41px" height="47px">
+                </use>
+              </svg>
+            </li>
+            <li class="icon-client-item">
+              <svg class="icon-client">
+                <use class="icon-group" href="./images/symbol-defsnew.svg#icon-group-5" width="41px" height="47px">
+                </use>
+              </svg>
+            </li>
+            <li class="icon-client-item">
+              <svg class="icon-client">
+                <use class="icon-group" href="./images/symbol-defsnew.svg#icon-group-6" width="41px" height="47px">
+                </use>
+              </svg>
+            </li>
+            </ul>
+          </div>
         </div>
         </section>
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo-fotter" href="index.html" >
-            <span class="color-logo-fotter">Web</span>Studio</a
-          >
-        <address class="address-footer">
-            <ul>
-              <li class="address-list">
-                <a class="contact-list" href="#"
-                  ><span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
-                >
-              </li>
-              <li class="address-list">
-                <a class="contact-list" href="mailto:info@devstudio.com "
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="address-list">
-                <a class="contact-list" href="tel:+380961111111"
-                  >+38 096 111 11 11</a>
-              </li>
-            </ul>
-        </address>
+        <div>
+          <a class="logo-fotter" href="index.html" >
+              <span class="color-logo-fotter">Web</span>Studio</a
+            >
+          <address class="address-footer">
+              <ul>
+                <li class="address-list">
+                  <a class="contact-list" href="#"
+                    ><span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
+                  >
+                </li>
+                <li class="address-list">
+                  <a class="contact-list" href="mailto:info@devstudio.com "
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="address-list">
+                  <a class="contact-list" href="tel:+380961111111"
+                    >+38 096 111 11 11</a>
+                </li>
+              </ul>
+          </address>
+        </div>
+        <div class="footer-icon-box">
+          <h2 class="footer-icon-header">Присоединяйтесь</h2>
+          <ul class="footer-icon-list">
+          <li class="socials-item">
+            <a href="#" class="socials-link-footer">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-instagram">
+                    </use>
+                   </svg>
+            </a>
+          </li>
+          <li class="socials-item">
+            <a href="#" class="socials-link-footer">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-twitter">
+                    </use>
+                  </svg>
+                    </a>
+          </li>
+          <li class="socials-item">
+            <a href="#" class="socials-link-footer">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-facebook">
+                    </use>
+                  </svg>
+                    </a>
+          </li>
+          <li class="socials-item">
+            <a href="#" class="socials-link-footer">
+                        <svg class="socials-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defsnew.svg#icon-linkedin">
+                    </use>
+                  </svg>
+                    </a>
+          </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
