--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li class="item-list">
               <div class="icon-box">
                 <svg class="icon">
-                  <use href="./images/symbol-defsnew.svg#icon-antenna">
+                  <use class="icon-item" href="./images/symbol-defsnew.svg#icon-antenna" width="70px" height="70px">
                   </use>
                 </svg>
               </div>
@@ -95,7 +95,7 @@
             <li class="item-list">
               <div class="icon-box">
                 <svg class="icon">
-                  <use href="./images/symbol-defsnew.svg#icon-clock">
+                  <use class="icon-item" href="./images/symbol-defsnew.svg#icon-clock" width="70px" height="70px">
                   </use>
                 </svg>
               </div>
@@ -108,7 +108,7 @@
             <li class="item-list">
               <div class="icon-box">
                 <svg class="icon">
-                  <use href="./images/symbol-defsnew.svg#icon-diagram">
+                  <use class="icon-item" href="./images/symbol-defsnew.svg#icon-diagram" width="70px" height="70px">
                   </use>
                 </svg>
               </div>
@@ -121,7 +121,7 @@
             <li class="item-list">
               <div class="icon-box">
                 <svg class="icon">
-                  <use href="./images/symbol-defsnew.svg#icon-astronaut"></use>
+                  <use class="icon-item" href="./images/symbol-defsnew.svg#icon-astronaut" width="70px" height="70px"></use>
                 </svg>
               </div>
               <h3 class="action">Современные технологии</h3>
