--- a/portfolio.html
+++ b/portfolio.html
@@ -72,112 +72,130 @@
           </ul>
           <ul class="app-list">
             <li class="item-app">
-              <img
-                src="images/img5.jpg"
-                alt="Пример техноякоря"
-                width="370"
-                height="294"
-              />
-              <div class="app-content">
-                <h2 class="product">Технокряк</h2>
-                <p class="type">Веб-сайт</p>
-              </div>
+              <a class="product-link" href="#">
+                <img
+                  src="images/img5.jpg"
+                  alt="Пример техноякоря"
+                  width="370"
+                  height="294"
+                />
+                <div class="app-content">
+                  <h2 class="product">Технокряк</h2>
+                  <p class="type">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item-app">
-              <img
-                src="images/img6.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-                height="294"
-              />
-              <div class="app-content">
-                <h2 class="product">Постер New Orlean vs Golden Star</h2>
-                <p class="type">Дизайн</p>
-              </div>
+              <a class="product-link" href="#">
+                <img
+                  src="images/img6.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <div class="app-content">
+                  <h2 class="product">Постер New Orlean vs Golden Star</h2>
+                  <p class="type">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item-app">
-              <img
-                src="images/img7.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-                height="294"
-              />
-              <div class="app-content">
-                <h2 class="product">Ресторан Seafood</h2>
-                <p class="type">Приложение</p>
-              </div>
+              <a class="product-link" href="#">
+                <img
+                  src="images/img7.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                  height="294"
+                />
+                <div class="app-content">
+                  <h2 class="product">Ресторан Seafood</h2>
+                  <p class="type">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item-app">
-              <img
-                src="images/img8.jpg"
-                alt="Проект Prime"
-                width="370"
-                height="294"
-              />
-              <div class="app-content">
-                <h2 class="product">Проект Prime</h2>
-                <p class="type">Маркетинг</p>
-              </div>
+              <a class="product-link" href="#">
+                <img
+                  src="images/img8.jpg"
+                  alt="Проект Prime"
+                  width="370"
+                  height="294"
+                />
+                <div class="app-content">
+                  <h2 class="product">Проект Prime</h2>
+                  <p class="type">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item-app">
-              <img
-                src="images/img9.jpg"
-                alt="Проект Boxes"
-                width="370"
-                height="294"
-              />
-              <div class="app-content">
-                <h2 class="product">Проект Boxes</h2>
-                <p class="type">Приложение</p>
-              </div>
+              <a class="product-link" href="#">
+                <img
+                  src="images/img9.jpg"
+                  alt="Проект Boxes"
+                  width="370"
+                  height="294"
+                />
+                <div class="app-content">
+                  <h2 class="product">Проект Boxes</h2>
+                  <p class="type">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item-app">
-              <img
-                src="images/img10.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <div class="app-content">
-                <h2 class="product">Inspiration has no Borders</h2>
-                <p class="type">Веб-сайт</p>
-              </div>
+              <a class="product-link" href="#">
+                <img
+                  src="images/img10.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <div class="app-content">
+                  <h2 class="product">Inspiration has no Borders</h2>
+                  <p class="type">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item-app">
-              <img
-                src="images/img11.jpg"
-                alt="Издание Limited Edition"
-                width="370"
-                height="294"
-              />
-              <div class="app-content">
-                <h2 class="product">Издание Limited Edition</h2>
-                <p class="type">Дизайн</p>
-              </div>
+              <a class="product-link" href="#">
+                <img
+                  src="images/img11.jpg"
+                  alt="Издание Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <div class="app-content">
+                  <h2 class="product">Издание Limited Edition</h2>
+                  <p class="type">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item-app">
-              <img
-                src="images/img12.jpg"
-                alt="Проект LAB"
-                width="370"
-                height="294"
-              />
-              <div class="app-content">
-                <h2 class="product">Проект LAB</h2>
-                <p class="type">Маркетинг</p>
-              </div>
+              <a class="product-link" href="#">
+                <img
+                  src="images/img12.jpg"
+                  alt="Проект LAB"
+                  width="370"
+                  height="294"
+                />
+                <div class="app-content">
+                  <h2 class="product">Проект LAB</h2>
+                  <p class="type">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item-app">
-              <img
-                src="images/img13.jpg"
-                alt="Growing Business"
-                width="370"
-                height="294"
-              />
-              <div class="app-content">
-                <h2 class="product">Growing Business</h2>
-                <p class="type">Приложение</p>
-              </div>
+              <a class="product-link" href="#">
+                <img
+                  src="images/img13.jpg"
+                  alt="Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <div class="app-content">
+                  <h2 class="product">Growing Business</h2>
+                  <p class="type">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -185,28 +203,63 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo-fotter" href="portfolio.html">
-          <span class="color-logo-fotter">Web</span>Studio</a
-        >
-        <address class="address-footer">
-          <ul>
-            <li class="address-list">
-              <a class="contact-list" href="#"
-                ><span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
-              >
+        <div>
+          <a class="logo-fotter" href="index.html">
+            <span class="color-logo-fotter">Web</span>Studio</a
+          >
+          <address class="address-footer">
+            <ul>
+              <li class="address-list">
+                <a class="contact-list" href="#"
+                  ><span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
+                >
+              </li>
+              <li class="address-list">
+                <a class="contact-list" href="mailto:info@devstudio.com "
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-list">
+                <a class="contact-list" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-icon-box">
+          <h2 class="footer-icon-header">Присоединяйтесь</h2>
+          <ul class="footer-icon-list">
+            <li class="socials-item">
+              <a href="#" class="socials-link-footer">
+                <svg class="socials-icon" width="20px" height="20px">
+                  <use href="./images/symbol-defsnew.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-list">
-              <a class="contact-list" href="mailto:info@devstudio.com "
-                >info@devstudio.com</a
-              >
+            <li class="socials-item">
+              <a href="#" class="socials-link-footer">
+                <svg class="socials-icon" width="20px" height="20px">
+                  <use href="./images/symbol-defsnew.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-list">
-              <a class="contact-list" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="socials-item">
+              <a href="#" class="socials-link-footer">
+                <svg class="socials-icon" width="20px" height="20px">
+                  <use href="./images/symbol-defsnew.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="#" class="socials-link-footer">
+                <svg class="socials-icon" width="20px" height="20px">
+                  <use href="./images/symbol-defsnew.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
